--- a/app.component.html
+++ b/app.component.html
@@ -2,6 +2,7 @@
 <div style="text-align:center">
   <h1 myHighlight>
     Welcome to {{ title }}!
+    <button (click)="change('test')">按了就報錯</button>
   </h1>
   <ul>
     <li><a routerLink="/stock"> ngFor 練習</a></li>
