--- a/app.component.html
+++ b/app.component.html
@@ -1,16 +1,27 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1 myHighlight>
-    Welcome to {{ title }}!
-    <button (click)="change('test')">按了就報錯</button>
-  </h1>
-  <ul>
-    <li><a routerLink="/stock"> ngFor 練習</a></li>
-    <li><a routerLink="/employee"> interpolation pipe HTML </a></li>
-    <li><a routerLink="/binding"> momentjs binding</a></li>
-  </ul>
-  <!-- <stock></stock> -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" myHighlight>{{ title }} !</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active"><a class="nav-link" routerLink="/stock"> ngFor 練習</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/employee"> interpolation pipe HTML </a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/binding"> momentjs binding</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/crib"> YouTube 練習</a></li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" (click)="change('test')">按了就報錯</button>
+    </form>
+  </div>
+</nav>
+<div class="container">
   <router-outlet></router-outlet>
 </div>
+
 
 
