簡單表格綁定

--- a/app.component.html
+++ b/app.component.html
@@ -11,6 +11,7 @@
       <li class="nav-item active"><a class="nav-link" routerLink="/stock"> ngFor 練習</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/employee"> interpolation pipe HTML </a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/binding"> momentjs binding</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/loginform">表格綁定</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/crib"> YouTube 練習</a></li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
