--- a/app.component.html
+++ b/app.component.html
@@ -8,11 +8,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active"><a class="nav-link" routerLink="/stock"> ngFor 練習</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/employee"> interpolation pipe HTML </a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/binding"> momentjs binding</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/loginform">表格綁定</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/crib"> YouTube 練習</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/stock" routerLinkActive="active"> ngFor 練習</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/employee" routerLinkActive="active"> interpolation pipe HTML </a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/binding" routerLinkActive="active"> momentjs binding</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/loginform" routerLinkActive="active">表格綁定</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/crib" routerLinkActive="active"> YouTube 練習</a></li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
